# foodkeeper

./: docker-compose-base.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/src/: manage.py
backend/src/foodkeeper/: asgi.py  settings.py  urls.py  wsgi.py
